<resources>
    <string name="app_name">MoreAppsLibrary</string>
    <string name="more_apps">More Apps</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">More Apps</string>
    <string name="tab_text_2">Updater</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>

    <string name="model">Model Name</string>
    <string name="serial">Serial Number</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="open_tutorial">Open Tutorial</string>
    <string name="manufacturer">Manufacturer</string>
</resources>
