<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_manufacturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/label_model"
        app:layout_constraintEnd_toStartOf="@+id/txt_manufacturer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_manufacturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/txt_model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_manufacturer"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/manufacturer"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/label_serial"
        app:layout_constraintEnd_toStartOf="@+id/txt_model"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_manufacturer"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/txt_serial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_model"
        app:layout_constraintTop_toBottomOf="@id/txt_manufacturer"
        tools:text="@string/model"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_serial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/serial"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/label_ssid"
        app:layout_constraintEnd_toStartOf="@+id/txt_serial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_model"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_serial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/txt_ssid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_serial"
        app:layout_constraintTop_toBottomOf="@+id/txt_model"
        tools:text="@string/serial"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_ssid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ssid"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@id/label_password"
        app:layout_constraintEnd_toStartOf="@+id/txt_ssid"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_serial"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_ssid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@id/txt_password"
        app:layout_constraintStart_toEndOf="@+id/label_ssid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/txt_serial"
        tools:text="@string/ssid"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@id/btn_open"
        app:layout_constraintEnd_toStartOf="@+id/txt_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_ssid"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_open"
        app:layout_constraintStart_toEndOf="@+id/label_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/txt_ssid"
        tools:text="@string/password"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_tutorial"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_password"
        />
</androidx.constraintlayout.widget.ConstraintLayout>